fixed breadcrumbs color in the dark mode

--- a/public/styles.css
+++ b/public/styles.css
@@ -1059,19 +1059,14 @@ video {
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-.text-purple-800 {
+.text-logo-main {
   --tw-text-opacity: 1;
-  color: rgb(107 33 168 / var(--tw-text-opacity));
+  color: rgb(155 4 4 / var(--tw-text-opacity));
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-logo-main {
-  --tw-text-opacity: 1;
-  color: rgb(155 4 4 / var(--tw-text-opacity));
 }
 
 .opacity-80 {
@@ -1258,6 +1253,11 @@ video {
   .dark\:hover\:border-gray-200:hover {
     --tw-border-opacity: 1;
     border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  }
+
+  .dark\:hover\:text-slate-50:hover {
+    --tw-text-opacity: 1;
+    color: rgb(248 250 252 / var(--tw-text-opacity));
   }
 }
 
